--- a/package.json
+++ b/package.json
@@ -22,11 +22,10 @@
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "^0.71.8",
+    "react-native": "0.71.8",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-ionicons": "^4.6.5",
     "react-native-linear-gradient": "^2.7.3",
-    "react-native-reanimated": "~2.14.4",
     "react-native-screens": "~3.20.0",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.10"
